--- a/index.html
+++ b/index.html
@@ -6,16 +6,79 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link  href="style.css" rel="stylesheet">
-    <title></title>
+    <title>A Rákosi-korszak gazdaságpolitikája</title>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
+            <li><a href="kepek.html">Képek</a></li>
+            <li><a href="munka.html">Pontozó lap</a></li>
+            <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
-
-    
- <script src="munka.js"></script>
+    <h1>Bevezető</h1>
+    <p>Magyarországot a világháború következtében súlyos veszteségek érték. A háborús pusztítás, a
+        szovjet megszállás és a jóvátételi kötelezettségek következtében Magyarország gazdasága
+        katasztrofális helyzetbe került.
+        Az Ideiglenes Kormány, majd a Tildy- és Nagy Ferenc vezette kormányok legfontosabb gazdasági
+        célja az újjáépítés, a földreform végrehajtása, az infláció megállítása, és a dezorganizálódott
+        gazdaság helyreállítása volt. Az állam erőteljes beavatkozásával és
+        kontrolljával megkezdték a kitűzött célok megvalósítását (földreform, 1945. márc.). Az új pénz, a
+        forint bevezetésével (1946. augusztus 1.) sikerült stabilizálni a gazdaságot.
+        A szovjetek ellenőrzése alá került térség államai – köztük Magyarország – az amerikai Marshall-terv
+        európai újjáépítési programjából a Szovjetunió tiltása és katonai jelenléte miatt nem részesedhettek.
+        A szovjet katonai jelenlét nem tette lehetővé a nyugati típusú piacgazdaság fenntartását. A Magyar
+        Kommunista Párt (MKP) szovjet támogatással fokozatosan megszerezte a politikai-gazdasági
+        hatalmat.</p>
+    <h2>A tétel</h2>
+    <p>A magyar gazdaság szovjet mintájú átszervezése (1946-47) folyamán megkezdődött a
+        kulcsfontosságú ágazatok (bányák, erőművek, bankok, külföldi érdekeltségek) részleges és teljes
+        államosítása.
+        Az államosítás és a Dinnyés-kormány idején elfogadott, az újjáépítést meghirdető hároméves terv
+        (1947 augusztusától) készítették elő a gazdasági rendszerváltást, a sztálini típusú gazdasági
+        fordulatot. A Kominform utasítására 1948-49-ben államosították az üzemeket. Megszüntették a
+        tőzsdét, felszámolták a piacgazdaság utolsó elemeit is.
+        A keleti tömb országainak gazdasági együttműködését – s egyben szovjet ellenőrzés alá vonását –
+        valósította meg az 1949-ben létrehozott Kölcsönös Gazdasági Segítség Tanácsa (KGST).
+        Az egyébiránt sikeres 1947-ben bevezetett hároméves terv végrehajtás során a kommunista
+        befolyás növekedése következtében arányeltolódás következett be a mezőgazdaság fejlesztésének
+        rovására, az iparon belül a nehézipari termelés jelentősen növekedett, míg a könnyűipari ágazatok
+        háttérbe szorultak. Gerő Ernő kijelentette, hogy Magyarországot a vas és acél országává kell
+        változtatni, függetlenül attól, hogy Magyarország nyersanyagbázisa ehhez nem volt elegendő, a
+        vasércet importálni kellett.
+        1950-től ötéves tervek szabályozták a gazdaság működését. Ezek jellemzői:
+        a megtermelt javak központosítása és újraelosztása, ami biztosította az állami ellenőrzést.
+        -Igen gyakran a tervanarchiába (végrehajthatatlan tervszámok) torkolló gazdasági
+        intézményrendszer alakult ki. 
+        -A racionalitást a politikai akarat háttérbe szorította folyamatos áru-, nyersanyag- és munkaerőhiány
+        -A lakosság ellátása másodlagos lett, az ország adottságainak jobban megfelelő élelmiszer- és
+        textilipar fejlesztését elhanyagolták.
+        -Az iparosítással egyidejűleg, részben épp annak feltételeit megteremtendő (élelmiszer,
+        felszabaduló munkaerő) megkezdődött a mezőgazdaság szovjet mintájú átszervezése is, a
+        kollektivizálás.
+        -Az erőszakos átalakítás, a nagy- és középbirtokos paraszti réteg („kulák”) ellehetetlenítése, a
+        beszolgáltatási rendszer és a padlássöprés (1952) miatt a mezőgazdasági termelés szintje nem
+        érte el a háború előttit, zavarok alakultak ki az élelmiszerellátásban, holott a hivatalos propaganda 
+        szerint emelkedett az életszínvonal.
+        -1951-ben bevezették a jegyrendszert és az ország gabonabehozatalra szorult.
+        -A tervgazdálkodás fontos eleme a munkaverseny-mozgalom vagy sztahanovizmus. Megszűnt a
+        munkanélküliség és büntették a munkakerülést. </p>
+        <h2>Lezárás</h2>
+        <p>A termények és jószágok kötelező beszolgáltatása, a kulákok üldözése, a kitelepítések,
+            internálások, a tagosítás (tudatosan rossz földcserére kényszerítették a földbirtokosokat), a
+            koncepciós perek és a gazdasági aránytalanságok rendkívül feszült politikai helyzetet
+            eredményeztek, ami miatt szükség volt az állam/párt akaratát mindenek felett képviselő
+            erőszakszervezetre is. (ÁVH)
+            Az új gazdasági rendszer miatt jelentős társadalmi változások is bekövetkeztek. Az 50-es éveket a
+            teljes foglalkoztatottság jellemezte, általánossá vált a női munkások alkalmazása is. A falvakból
+            sokan költöztek be az iparosodó városokba, nehézipari központokba, mert a mezőgazdaság
+            erőszakos átalakítása miatt több százezren végleg felhagytak a gazdálkodással. Jelentősen
+            megnövekedett az önkéntes vagy kényszerű társadalmi mobilitás.
+            <br>
+            A Sztálin halála (1953. március 5.) utáni szovjet politika változásai tették lehetővé a Rákosi diktatúra
+            felszámolását, a Nagy Imre miniszterelnök (1953-55) vezette "új szakasz politikájának"
+            megvalósítását.</p>
+    <footer><a href="https://www.leoweypecs.hu/?page_id=772">https://www.leoweypecs.hu/?page_id=772</a></footer>
 </body>
 </html>
