--- a/munka.html
+++ b/munka.html
@@ -12,10 +12,10 @@
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
-            <li><a href="kepek.html">Képek</a></li>
             <li><a href="munka.html">Pontozó lap</a></li>
             <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
+    <div></div>
 </body>
 </html>
