--- a/rolam.html
+++ b/rolam.html
@@ -12,10 +12,13 @@
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
-            <li><a href="kepek.html">Képek</a></li>
             <li><a href="munka.html">Pontozó lap</a></li>
             <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
+    <div>
+        <h1>Készítette:</h1>
+        <h2>Berczi Zoltán</h2>
+    </div>
 </body>
 </html>
