--- a/rolam.html
+++ b/rolam.html
@@ -18,7 +18,7 @@
     </nav>
     <div>
         <h1>Készítette:</h1>
-        <h2>Berczi Zoltán</h2>
+        <h2>Berczi Zoltán<br>11.B</h2>
     </div>
 </body>
 </html>
