--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
-            <li><a href="munka.html">Pontozó lap</a></li>
+            <li><a href="munka.html">Űrlap</a></li>
             <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
@@ -95,7 +95,7 @@
         megvalósítását.</p>
         <div class="img">
             <img src="imre.jpg" alt="Nagy Imre magyar kommunista politikus 1953 és 1955 között, valamint az 1956-os forradalom alatt a Minisztertanács elnöke.">
-            <p><a href="https://hu.wikipedia.org/wiki/Nagy_Imre_(minisztereln%C3%B6k)">Nagy Imre</a> magyar kommunista politikus 1953 és 1955 között,<br> valamint az 1956-os forradalom alatt a Minisztertanács elnöke.</p>
+            <p><a href="https://hu.wikipedia.org/wiki/Nagy_Imre_(minisztereln%C3%B6k)">Nagy Imre</a>Magyar kommunista politikus 1953 és 1955 között,<br> valamint az 1956-os forradalom alatt a Minisztertanács elnöke.</p>
         </div>
     <footer><a href="https://erettsegi.com/tetelek/tortenelem/rakosi-korszak-gazdasaga/">Források</a></footer>
     </div>
