--- a/munka.html
+++ b/munka.html
@@ -6,19 +6,54 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link  href="style.css" rel="stylesheet">
-    <title>Pontozó lap</title>
+    <title>Űrlap</title>
 </head>
 <body>
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
-            <li><a href="munka.html">Pontozó lap</a></li>
+            <li><a href="munka.html">Űrlap</a></li>
             <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
     <div>
-        <h1>Pontozó lap</h1>
-        
-    </div>
+        <h1>Űrlap</h1>
+        <p>Az ezen az oldalon lévő kis űrlap kitöltésével megnézheted az érettségi ponthatárokat a témához.<br>
+        (Az érdemjegyet a mellette található ponthatárok mutatják meg.)</p>
+        <form>
+            Írásbeli pontok száma: <input type="number" name="num1" min="12" max="90"><br>
+            Szóbeli pontok száma: <input type="number" name="num2" min="3" max="60"><br>
+            Összesen: <input type="number" name="sum"><br>
+            <input type="button" value="Összead" onclick="calcSum()">
+        </form>
+        <table>
+              <tr>
+                <th colspan="1">Osztályzatok</th>
+                <th colspan="1">Pontok, ponthatárok</th>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>0-36</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>37-59</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>60-89</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>90-118</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>119-150</td>
+              </tr>
+          </table>
+          <br>
+        </div>
+    <script src="munka.js"></script>
 </body>
 </html>
