--- a/rolam.html
+++ b/rolam.html
@@ -12,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Főoldal</a></li>
-            <li><a href="munka.html">Pontozó lap</a></li>
+            <li><a href="munka.html">Űrlap</a></li>
             <li><a href="rolam.html">Egyéb információk</a></li>
         </ul>
     </nav>
