--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">Főoldal</a></li>
             <li><a href="munka.html">Űrlap</a></li>
-            <li><a href="rolam.html">Egyéb információk</a></li>
+            <li><a href="egyeb.html">Egyéb információk</a></li>
         </ul>
     </nav>
     <div>
